syntax = "proto3";

package stream_pb;

service StringService {
    rpc Concat(StringRequest) returns (StringResponse) {}
    rpc LotsOfServerStream(StringRequest) returns (stream StringResponse) {}
    rpc LotsOfClientStream(stream StringRequest) returns (StringResponse) {}
    rpc LotsOfServerAndClientStream(stream StringRequest) returns (stream StringResponse) {}
}

message StringRequest {
    string a = 1;
    string b = 2;
}

message StringResponse {
    string result = 1;
    string message = 2;
    string data = 3;
}
